--- a/config/ssh/config
+++ b/config/ssh/config
@@ -11,6 +11,9 @@ Host *-r*
 Host *-debug*
   LogLevel DEBUG
 
+Host *-x11*
+  ForwardX11 yes
+
 Host *github*
   HostName ssh.github.com
   Port 443
