fix(ssh): correct Include path and comment IdentitiesOnly in common config
- comment out `IdentitiesOnly yes` in config/ssh/_commons.conf
- update scripts/setup-common.sh to set include_line to `Include conf.d/nodes/${os_name}.${host_name}.conf` (removed the leading `.ssh/`)

--- a/config/ssh/_commons.conf
+++ b/config/ssh/_commons.conf
@@ -21,7 +21,7 @@ Host *
 
   # Only try keys specified by IdentityFile
   # If ssh-agent has many keys, trying all can cause "Too many authentication failures"
-  IdentitiesOnly                yes
+  # IdentitiesOnly                yes
 
   # Whether to attempt Kerberos authentication
   GSSAPIAuthentication          no
