fix(ssh): disable ControlPersist in SSH common config
- change ControlPersist from 30m to no in config/ssh/_commons.conf
- update Host * block to disable SSH control master persistence

--- a/config/ssh/_commons.conf
+++ b/config/ssh/_commons.conf
@@ -29,7 +29,7 @@ Host *
 # Control
   ControlMaster               auto
   ControlPath                 ~/.ssh/conf.d/cm/mux-%C.sock
-  ControlPersist              30m
+  ControlPersist              no
 
 # Keep Alive
   ConnectTimeout              5
